--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-rm -rf /opt/mycroft/skills/cmus-skill.colla
+rm -rf /opt/mycroft/skills/localmusicplayer-skill.colla69
 
-mkdir /opt/mycroft/skills/cmus-skill.colla
+mkdir /opt/mycroft/skills/localmusicplayer-skill.colla69
 
-cp -r ~/sandbox/cmus-skill/* /opt/mycroft/skills/cmus-skill.colla/
+cp -r ~/sandbox/localmusicplayer-skill/* /opt/mycroft/skills/localmusicplayer-skill.colla69/
