--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-rm -rf /opt/mycroft/skills/localmusicplayer-skill.colla69
+rm -rf /opt/mycroft/skills/localmusicplayer-skill
 
-mkdir /opt/mycroft/skills/localmusicplayer-skill.colla69
+mkdir /opt/mycroft/skills/localmusicplayer-skill
 
-cp -r ~/sandbox/localmusicplayer-skill/* /opt/mycroft/skills/localmusicplayer-skill.colla69/
+cp -r ~/sandbox/localmusicplayer-skill/* /opt/mycroft/skills/localmusicplayer-skill/
